--- a/content/resources/21a-337js04-th.md
+++ b/content/resources/21a-337js04-th.md
@@ -2,13 +2,15 @@
 content_type: resource
 description: Series of a crew working on a documentary film set. (Photographs courtesy
   of Rosemary Rawcliffe of Frame of Mind Films.)
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21a-337j-documenting-culture-spring-2004/b4d397f946e492d0e5a5925f9106a2eb_21a-337js04-th.jpg
+file: /media/courses/21a-337j-documenting-culture-spring-2004/b4d397f946e492d0e5a5925f9106a2eb_21a-337js04-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Series of a crew working on a documentary film set. (Photographs courtesy\
     \ of Rosemary Rawcliffe of\_[Frame of Mind Films](http://www.frameofmindfilms.com).)"
   credit: ''
   image-alt: Three stills from a movie.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: Documentary Film Set (thumbnail)
 uid: b4d397f9-46e4-92d0-e5a5-925f9106a2eb
