--- a/content/resources/21a-337js04.md
+++ b/content/resources/21a-337js04.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Series of a crew working on a documentary film set. (Photographs courtesy
   of Rosemary Rawcliffe of Frame of Mind Films.)
-file: /media/courses/21a-337j-documenting-culture-spring-2004/ce1ce3e4d67607b83bc1fc7d611f0a8f_21a-337js04.jpg
+file: /courses/21a-337j-documenting-culture-spring-2004/ce1ce3e4d67607b83bc1fc7d611f0a8f_21a-337js04.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Series of a crew working on a documentary film set. (Photographs courtesy\
@@ -15,3 +15,5 @@ resourcetype: Image
 title: Documentary Film Set
 uid: ce1ce3e4-d676-07b8-3bc1-fc7d611f0a8f
 ---
+Series of a crew working on a documentary film set. (Photographs courtesy of Rosemary Rawcliffe of Frame of Mind Films.)
+
