Sync all content

--- a/content/resources/21a-337js04-th.md
+++ b/content/resources/21a-337js04-th.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Three stills from a movie.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Documentary Film Set (thumbnail)
 uid: b4d397f9-46e4-92d0-e5a5-925f9106a2eb
 ---
 Series of a crew working on a documentary film set. (Photographs courtesy of Rosemary Rawcliffe of Frame of Mind Films.)
-
