--- a/content/resources/21a-337js04.md
+++ b/content/resources/21a-337js04.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Three stills from a movie.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Documentary Film Set
 uid: ce1ce3e4-d676-07b8-3bc1-fc7d611f0a8f
 ---
 Series of a crew working on a documentary film set. (Photographs courtesy of Rosemary Rawcliffe of Frame of Mind Films.)
-
